--- a/FRONTEND/snapnote/public/index.html
+++ b/FRONTEND/snapnote/public/index.html
@@ -9,6 +9,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" type="text/css" href="//fonts.googleapis.com/css?family=Lobster" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel='stylesheet'>
     <title>SnapNote</title>
   </head>
   <body>
